--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -13,13 +13,14 @@
 </div>
 
 <div class="container">
+    <button type="button" id="create-btn" th:onclick="|location.href='@{/new-article}'|" class="btn btn-primary btn-sm mb-3">글 등록</button>
     <div class="mb-3" th:each="item : ${articles}">
         <div class="card">
             <div class="card-header" th:text="${item.id}">
             </div>
             <div class="class-body">
-                <h5 class="card-title" th:text="item.title"></h5>
-                <h5 class="card-title" th:text="item.content"></h5>
+                <h5 class="card-title" th:text="${item.title}"></h5>
+                <h5 class="card-title" th:text="${item.content}"></h5>
                 <a th:href="@{/articles/{id}(id=${item.id})}" class="btn btn-primary">보러가기</a>
             </div>
         </div>
