--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -25,7 +25,10 @@
             </div>
         </div>
     </div>
+    <button type="button" class="btn btn-secondary" onclick="location.href='./logout'">로그아웃</button>
+
 </div>
 
+<script src="/js/articles.js"></script>
 </body>
 </html>
